Fix horizontal scroll

--- a/src/timebar/components/timeline.module.css
+++ b/src/timebar/components/timeline.module.css
@@ -9,7 +9,7 @@
   width: 100%;
   height: 100%;
   z-index: 0;
-  clip-path: inset(-50px 0 0 0);
+  overflow: hidden;
 }
 
 .graph {
@@ -66,30 +66,16 @@
   padding-left: 2rem;
   user-select: none;
   font-weight: 400;
-  overflow: hidden;
-
-  /* min-width: 200px; */
+  white-space: nowrap;
+  z-index: 1;
 }
 
 .lastUpdate {
-  max-width: 50%;
-  font-size: 12px;
-}
-
-@media screen and (min-width: 768px) {
-  .lastUpdate {
-    max-width: 110px;
-    font-size: 20.8px;
-  }
-}
-
-@media screen and (min-width: 1154px) {
-  .lastUpdate {
-    max-width: 100%;
-  }
+  font-size: 1.4rem;
 }
 
 .lastUpdateLabel {
   text-transform: uppercase;
   opacity: 0.4;
+  font-size: 1.2rem;
 }
